--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 31
         versionCode 38
-        versionName "2.7.0"
+        versionName "2.7.0W"
     }
 }
 
