--- a/cs108library4a/build.gradle
+++ b/cs108library4a/build.gradle
@@ -6,8 +6,8 @@ android {
         minSdkVersion 19
         targetSdkVersion 31
         versionCode 38
-        versionName "2.7.0"
-        buildConfigField 'String', 'VERSION_NAME', "\"2.7.0\""
+        versionName "2.7.0W"
+        buildConfigField 'String', 'VERSION_NAME', "\"2.7.0W\""
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
